@@ -1,3 +1,12 @@
+2014-01-15  Eli Zaretskii  <eliz@gnu.org>
+
+	* popen.c (os_system): Use spawnl, and quote the command line, to
+	be consistent with what gawk_popen does.
+	(os_popen) [__MINGW32__]: Don't scriptify the command, to be
+	consistent with gawk_popen.
+	(os_pclose) [__MINGW32__]: Update to match os_open: no need to
+	unlink the script file.
+
 2013-12-10   Scott Deifik  <scottd.mail@sbcglobal.net>
 
 	* gawkmisc.c (init_sockets): Move into the right part of the
